--- a/MCServicesWeb/MCServicesWeb/Views/Home/Index.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Home/Index.cshtml
@@ -2,30 +2,128 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+     <!-- Banner -->
+        <section id="banner">
+            <div class="inner">
+                <h2>MiKa Craft</h2>
+                <p>
+                    米卡服务器<br />
+                    公益 · 休闲 · 无收费<br />
+                    <!--crafted by <a href="#">XianYu Craft</a>.</p>-->
+                    <ul class="actions">
+                        <li><a href="http://shang.qq.com/wpa/qunwpa?idkey=e276b0bdf41d07187f6e9fcc1081a946c79d9793da6aea3d9ec0955a289ea52a" class="button special">加入我们</a></li>
+                    </ul>
+            </div>
+            <a href="#one" class="more scrolly">Learn More</a>
+        </section>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+        <!-- One -->
+        <section id="one" class="wrapper style1 special">
+            <div class="inner">
+                <header class="major">
+                    <h2>
+                        纯公益休闲服务器<br />
+                        和你的朋友一起来MiKa Craft
+                    </h2>
+                    <p>
+                        高度自由开放的沙盒世界，友爱互助，共同发展。<br />
+                        定期投票更换周目，更多更新玩法，和朋友一起分享。
+                    </p>
+                </header>
+                <ul class="icons major">
+                    <li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
+                    <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
+                    <li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Two -->
+        <section id="two" class="wrapper alt style2">
+            <section class="spotlight">
+                <div class="image"><img src="../../Content/images/pic01.jpg" alt="" /></div><div class="content">
+                    <h2>
+                        建筑大神亲自操刀服务器主城<br />
+                        美轮美奂
+                    </h2>
+                    <p>每周目根据周目风格定制化的服务器主城，美轮美奂，带给你最极致的游戏体验。</p>
+                </div>
+            </section>
+            <section class="spotlight">
+                <div class="image"><img src="../../Content/images/pic02.jpg" alt="" /></div><div class="content">
+                    <h2>
+                        定期投票周目MOD<br />
+                        无与伦比
+                    </h2>
+                    <p>定期投票更换周目，更多的MOD组合与搭配由你决定，还不呼朋唤友，一起来玩。</p>
+                </div>
+            </section>
+            <section class="spotlight">
+                <div class="image"><img src="../../Content/images/pic03.jpg" alt="" /></div><div class="content">
+                    <h2>
+                        互帮互助的大家庭<br />
+                        和谐友善
+                    </h2>
+                    <p>MC不是一个人的游戏，加入我们的大家庭，一起游戏，一起娱乐，还不快来。</p>
+                </div>
+            </section>
+        </section>
+
+        <!-- Three -->
+        <section id="three" class="wrapper style3 special">
+            <div class="inner">
+                <header class="major">
+                    <h2>MiKa Craft —— MiKa服务器，体验MC沙盒世界的最佳选择</h2>
+                    <p>
+                        超高自由度，超美风景主城，超暖心服务器管理<br />
+                        还在等什么，全公益无收费服务器，还不快叫上你的朋友一起来玩。
+                    </p>
+                </header>
+                <ul class="features">
+                    <li class="icon fa-paper-plane-o">
+                        <h3>超快网络配置</h3>
+                        <p>高并发主干线路带宽，数十玩家同时在线不卡，带给你更流畅体验。</p>
+                    </li>
+                    <li class="icon fa-laptop">
+                        <h3>超高配置服务器</h3>
+                        <p>24核64G超高配置自建专用服务器，带给你非一般的游戏体验。</p>
+                    </li>
+                    <li class="icon fa-code">
+                        <h3>专业的服务器管理</h3>
+                        <p>数年管理经验大佬管理服务器，周目更换，mod搭配，权限配置，安心畅玩。</p>
+                    </li>
+                    <li class="icon fa-headphones">
+                        <h3>不仅仅只有MC</h3>
+                        <p>不仅仅只有MC，还有众多其他游戏，等你开黑，快加入我们的大家庭。</p>
+                    </li>
+                    <li class="icon fa-heart-o">
+                        <h3>超有爱的服务器伙伴</h3>
+                        <p>一个人玩怎么有趣？服务器小伙伴等你来约，一起哈啤~</p>
+                    </li>
+                    <li class="icon fa-flag-o">
+                        <h3>远大的目标</h3>
+                        <p>我们立志打造更大更强的服务器，创建专业的团队，还等什么，就差你了！</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- CTA -->
+        <section id="cta" class="wrapper style4">
+            <div class="inner">
+                <header>
+                    <h2>MiKa Craft</h2>
+                    <p>不要在犹豫和等待了，MiKa Craft是你最佳的选择，还不赶快加入，一起畅玩。</p>
+                </header>
+                <ul class="actions vertical">
+                    <li><a href="http://shang.qq.com/wpa/qunwpa?idkey=e276b0bdf41d07187f6e9fcc1081a946c79d9793da6aea3d9ec0955a289ea52a" class="button fit special">立即加入</a></li>
+                    <li><a href="#" class="button fit">Learn More</a></li>
+                </ul>
+            </div>
+        </section>
+
+        
+
+
+
+
