--- a/MCServicesWeb/MCServicesWeb/Views/Shared/_Layout.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Shared/_Layout.cshtml
@@ -18,16 +18,18 @@
     <div id="page-wrapper">
         <!-- Header -->
         <header id="header" class="alt">
-            <h1><a href="index.html">MiKa Craft</a></h1>
+            <h1><a href="/Home/index">@ViewBag.Title</a></h1>
             <nav id="nav">
                 <ul>
                     <li class="special">
                         <a href="#menu" class="menuToggle"><span>Menu</span></a>
                         <div id="menu">
                             <ul>
-                                <li><a href="index.html">首页</a></li>
-                                <li><a href="#">服务器展示</a></li>
-                                <li><a href="http://mikamc.mdzz2333.cn:8123" target="_blank">卫星地图</a></li>
+                                <li><a href="/Home/index">Home</a></li>
+                                <li><a href="#">WhiteList</a></li>
+                                <li><a href="#">Shop</a></li>
+                                <li><a href="#">Sign Up</a></li>
+                                <li><a href="#">Log in</a></li>
                             </ul>
                         </div>
                     </li>
