--- a/MCServicesWeb/MCServicesWeb/Views/Home/Index.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
      <!-- Banner -->
         <section id="banner">
             <div class="inner">
-                <h2>MiKa Craft</h2>
+                <h2>@ViewBag.Title</h2>
                 <p>
                     米卡服务器<br />
                     公益 · 休闲 · 无收费<br />
