--- a/MCServicesWeb/MCServicesWeb/Views/Home/About.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Home/About.cshtml
@@ -1,7 +1,21 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<!-- Main -->
+<article id="main">
+<header>
+    <h2>@ViewBag.Title.</h2>
+    <p>@ViewBag.Message</p>
+</header>
+<section class="wrapper style5">
+<div class="inner">
+    <section>
+        <h4>Text</h4>
+
+    </section>
+
+</div>
+</section>
+</article>
