--- a/MCServicesWeb/MCServicesWeb/Views/Shared/_Layout.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Shared/_Layout.cshtml
@@ -25,8 +25,7 @@
                                 <li><a href="/Home/index">Home</a></li>
                                 <li><a href="#">WhiteList</a></li>
                                 <li><a href="#">Shop</a></li>
-                                <li><a href="#">Sign Up</a></li>
-                                <li><a href="#">Log in</a></li>
+                                @Html.Partial("_LoginPartial")
                             </ul>
                         </div>
                     </li>
