--- a/MCServicesWeb/MCServicesWeb/Views/Shared/Error.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Shared/Error.cshtml
@@ -1,9 +1,20 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "错误";
+    ViewBag.Title = "嗷嗷…我们遇到了一个不可预知的错误(ノへ￣、)";
 }
-
-<h1 class="text-danger">错误。</h1>
-<h2 class="text-danger">处理请求时发生错误。</h2>
+<article id="main">
+    <header>
+        <h1 class="text-danger">错误(ノへ￣、)</h1>
+        <h2 class="text-danger">我们遇到了一个不可预知的错误</h2>
+    </header>
+    <section class="wrapper style5">
+        <div class="inner">
+            <section>
+                <h1 class="text-danger">错误(ノへ￣、)</h1>
+                <h2 class="text-danger">我们遇到了一个不可预知的错误</h2>
+            </section>
+        </div>
+    </section>
+</article>
 
