--- a/MCServicesWeb/MCServicesWeb/Views/Shared/Lockout.cshtml
+++ b/MCServicesWeb/MCServicesWeb/Views/Shared/Lockout.cshtml
@@ -4,7 +4,19 @@
     ViewBag.Title = "已锁定";
 }
 
-<hgroup>
-    <h1 class="text-danger">已锁定。</h1>
-    <h2 class="text-danger">此帐户已锁定，请稍后重试。</h2>
-</hgroup>
+<article id="main">
+    <header>
+        <h1 class="text-danger">已锁定(ノへ￣、)</h1>
+        <h2 class="text-danger">此帐户已锁定，请稍后重试</h2>
+    </header>
+    <section class="wrapper style5">
+        <div class="inner">
+            <section>
+                <hgroup>
+                    <h1 class="text-danger">已锁定。</h1>
+                    <h2 class="text-danger">此帐户已锁定，请稍后重试。</h2>
+                </hgroup>
+            </section>
+        </div>
+    </section>
+</article>
