--- a/MCServicesWeb/Views/Manage/Index.cshtml
+++ b/MCServicesWeb/Views/Manage/Index.cshtml
@@ -4,7 +4,14 @@
 }
 
 <h2>@ViewBag.Title。</h2>
-
+<article id="main">
+<header>
+    <h2>@ViewBag.Title.</h2>
+    <p>@ViewBag.Message</p>
+</header>
+<section class="wrapper style5">
+<div class="inner">
+<section>
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h4>更改你的帐户设置</h4>
@@ -85,3 +92,12 @@
         </dd>
     </dl>
 </div>
+            </section>
+        </div>
+
+        </div>
+
+    </section>
+    </div>
+    </section>
+</article>
